go/p2panda_ffi/p2panda_ffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef struct UniffiVTableCallbackInterfaceEphemeralStreamCallback {
    UniffiCallbackInterfaceFree uniffiFree;
    UniffiCallbackInterfaceClone uniffiClone;
    UniffiCallbackInterfaceEphemeralStreamCallbackMethod0 onMessage;
} UniffiVTableCallbackInterfaceEphemeralStreamCallback;
typedef struct UniffiVTableCallbackInterfaceTopicStreamCallback {
    UniffiCallbackInterfaceFree uniffiFree;
    UniffiCallbackInterfaceClone uniffiClone;
    UniffiCallbackInterfaceTopicStreamCallbackMethod0 onEvent;
    UniffiCallbackInterfaceTopicStreamCallbackMethod1 onError;
    UniffiCallbackInterfaceTopicStreamCallbackMethod2 onOperation;
} UniffiVTableCallbackInterfaceTopicStreamCallback;
uint64_t uniffi_p2panda_ffi_fn_clone_nodebuilder(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_nodebuilder(uint64_t handle, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_cursor_name(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_hash(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_hash(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_hash_digest(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_hash_from_bytes(RustBuffer value, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_constructor_hash_from_hex(RustBuffer value, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_hash_to_bytes(uint64_t ptr, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_hash_to_hex(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_header(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_header(uint64_t handle, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_header_backlink(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_header_hash(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_networkid(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_networkid(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_privatekey(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_privatekey(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_publickey(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_publickey(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_relayurl(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_relayurl(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_signature(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_signature(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_topicid(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_topicid(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_ephemeralmessage_author(uint64_t ptr, RustCallStatus *out_status
);
RustBuffer uniffi_p2panda_ffi_fn_method_ephemeralmessage_body(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_ephemeralmessage_timestamp(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_ephemeralmessage_topic(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_ephemeralstream_publish(uint64_t ptr, RustBuffer message
);
uint64_t uniffi_p2panda_ffi_fn_method_ephemeralstream_topic(uint64_t ptr, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_init_callback_vtable_ephemeralstreamcallback(UniffiVTableCallbackInterfaceEphemeralStreamCallback* vtable
);
void uniffi_p2panda_ffi_fn_method_ephemeralstreamcallback_on_message(uint64_t ptr, uint64_t message, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_node(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_node(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_topicstreamcallback(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_topicstreamcallback(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_init_callback_vtable_topicstreamcallback(UniffiVTableCallbackInterfaceTopicStreamCallback* vtable
);
RustBuffer uniffi_p2panda_ffi_fn_method_event_body(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_method_event_header(uint64_t ptr, RustCallStatus *out_status
);
int8_t uniffi_p2panda_ffi_fn_method_event_is_completed(uint64_t ptr, RustCallStatus *out_status
);
int8_t uniffi_p2panda_ffi_fn_method_event_is_failed(uint64_t ptr, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_processedoperation(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_processedoperation(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_topicstream(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_topicstream(uint64_t handle, RustCallStatus *out_status
);