python/p2panda_ffi/p2panda_ffi.py

_UniffiLib.uniffi_p2panda_ffi_fn_clone_hash.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_hash.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_hash.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_hash.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_header.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_header.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_header.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_header.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_networkid.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_networkid.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_networkid.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_networkid.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_node.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_node.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_node.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_node.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_nodebuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_nodebuilder.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_nodebuilder.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_nodebuilder.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_privatekey.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_privatekey.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_privatekey.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_privatekey.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_processedoperation.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_processedoperation.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_processedoperation.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_processedoperation.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_publickey.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_publickey.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_publickey.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_publickey.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_relayurl.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_relayurl.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_relayurl.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_relayurl.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_signature.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_signature.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_signature.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_signature.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_topicid.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_topicid.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_topicid.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_topicid.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_topicstream.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_topicstream.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_topicstream.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_topicstream.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_clone_topicstreamcallback.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_clone_topicstreamcallback.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_free_topicstreamcallback.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_free_topicstreamcallback.restype = None
_UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_EPHEMERAL_STREAM_CALLBACK_METHOD0 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_uint64,ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_CLONE_P2PANDA_FFI_EPHEMERAL_STREAM_CALLBACK = ctypes.CFUNCTYPE(ctypes.c_uint64,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE_P2PANDA_FFI_EPHEMERAL_STREAM_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiVTableCallbackInterfaceP2pandaFfiEphemeralStreamCallback(ctypes.Structure):
    _fields_ = [
        ("uniffi_free", _UNIFFI_CALLBACK_INTERFACE_FREE_P2PANDA_FFI_EPHEMERAL_STREAM_CALLBACK),
        ("uniffi_clone", _UNIFFI_CALLBACK_INTERFACE_CLONE_P2PANDA_FFI_EPHEMERAL_STREAM_CALLBACK),
        ("on_message", _UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_EPHEMERAL_STREAM_CALLBACK_METHOD0),
    ]
_UniffiLib.uniffi_p2panda_ffi_fn_init_callback_vtable_ephemeralstreamcallback.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceP2pandaFfiEphemeralStreamCallback),
)
_UniffiLib.uniffi_p2panda_ffi_fn_init_callback_vtable_ephemeralstreamcallback.restype = None
_UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK_METHOD0 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiRustBuffer,ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK_METHOD1 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiRustBuffer,ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK_METHOD2 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_uint64,_UniffiRustBuffer,ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UNIFFI_CALLBACK_INTERFACE_CLONE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK = ctypes.CFUNCTYPE(ctypes.c_uint64,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiVTableCallbackInterfaceP2pandaFfiTopicStreamCallback(ctypes.Structure):
    _fields_ = [
        ("uniffi_free", _UNIFFI_CALLBACK_INTERFACE_FREE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK),
        ("uniffi_clone", _UNIFFI_CALLBACK_INTERFACE_CLONE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK),
        ("on_event", _UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK_METHOD0),
        ("on_error", _UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK_METHOD1),
        ("on_operation", _UNIFFI_CALLBACK_INTERFACE_P2PANDA_FFI_TOPIC_STREAM_CALLBACK_METHOD2),
    ]
_UniffiLib.uniffi_p2panda_ffi_fn_init_callback_vtable_topicstreamcallback.argtypes = (
    ctypes.POINTER(_UniffiVTableCallbackInterfaceP2pandaFfiTopicStreamCallback),
)
_UniffiLib.uniffi_p2panda_ffi_fn_init_callback_vtable_topicstreamcallback.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_cursor_name.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_cursor_name.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_author.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_author.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_body.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_body.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_timestamp.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_timestamp.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_topic.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralmessage_topic.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralstream_publish.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralstream_publish.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralstream_topic.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralstream_topic.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralstreamcallback_on_message.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_ephemeralstreamcallback_on_message.restype = None
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_body.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_body.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_header.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_header.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_is_completed.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_is_completed.restype = ctypes.c_int8
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_is_failed.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_event_is_failed.restype = ctypes.c_int8
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_hash_digest.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_hash_digest.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_hash_from_bytes.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_hash_from_bytes.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_hash_from_hex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_constructor_hash_from_hex.restype = ctypes.c_uint64
_UniffiLib.uniffi_p2panda_ffi_fn_method_hash_to_bytes.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_hash_to_bytes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_hash_to_hex.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_hash_to_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_backlink.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_backlink.restype = _UniffiRustBuffer
_UniffiLib.uniffi_p2panda_ffi_fn_method_header_hash.argtypes = (
